MyDemoOrg/force-app/main/default/objects/signature__List__c/signature__List__c.object-meta.xml
<CustomObject>
    <description>Contact Lists</description>
    <label>ß List</label>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>L#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>