MyDemoOrg/force-app/main/default/objects/signature__List__c/fields/signature__BrowsePlan__c.field-meta.xml
<CustomField>
    <fullName>signature__BrowsePlan__c</fullName>
    <label>Browse Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>