MyDemoOrg/force-app/main/default/objects/signature__List__c/fields/signature__CurrentBrowsePlan__c.field-meta.xml
<CustomField>
    <fullName>signature__CurrentBrowsePlan__c</fullName>
    <label>Current Browse Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>