MyDemoOrg/force-app/main/default/objects/signature__List__c/fields/signature__Object__c.field-meta.xml
<CustomField>
    <fullName>signature__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>