MyDemoOrg/force-app/main/default/objects/signature__List__c/fields/signature__RecordCount__c.field-meta.xml
<CustomField>
    <fullName>signature__RecordCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>