MyDemoOrg/force-app/main/default/objects/signature__List__c/fields/signature__Records__c.field-meta.xml
<CustomField>
    <fullName>signature__Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>